--- a/Populate_db.ipynb
+++ b/Populate_db.ipynb
@@ -233,7 +233,7 @@
     }
    ],
    "source": [
-    "curs.execute('''SELECT * FROM strain WHERE id==4''')"
+    "curs.execute('''SELECT * FROM strain WHERE name==''')"
    ]
   },
   {
