fix strain route

--- a/Populate_db.ipynb
+++ b/Populate_db.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -198,7 +198,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-fe70ad972d03>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#add each strain from the csv file into the database\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mrow\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitertuples\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     insert = f'''\n\u001b[0;32m      4\u001b[0m         INSERT INTO strain VALUES {row[0], row[1], row[2], row[3], row[4], row[5], row[6], row[7], row[8]};'''\n\u001b[0;32m      5\u001b[0m     \u001b[0mcurs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minsert\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-13-fe70ad972d03>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#add each strain from the csv file into the database\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mrow\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitertuples\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     insert = f'''\n\u001b[0;32m      4\u001b[0m         INSERT INTO strain VALUES {row[0], row[1], row[2], row[3], row[4], row[5], row[6], row[7], row[8]};'''\n\u001b[0;32m      5\u001b[0m     \u001b[0mcurs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minsert\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
      ]
     }
@@ -215,33 +215,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
-   "outputs": [
-    {
-     "ename": "UndefinedFunction",
-     "evalue": "operator does not exist: integer == integer\nLINE 1: SELECT * FROM strain WHERE id==4\n                                     ^\nHINT:  No operator matches the given name and argument types. You might need to add explicit type casts.\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUndefinedFunction\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-10-e9d7b7b34338>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcurs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'''SELECT * FROM strain WHERE id==4'''\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mUndefinedFunction\u001b[0m: operator does not exist: integer == integer\nLINE 1: SELECT * FROM strain WHERE id==4\n                                     ^\nHINT:  No operator matches the given name and argument types. You might need to add explicit type casts.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "curs.execute('''SELECT * FROM strain WHERE name==''')"
+    "curs.execute('''SELECT * FROM strain WHERE name='Ak-47' ''')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(23, 'Ak-47', 'hybrid', 4.2, 'Happy, Relaxed, Uplifted, Euphoric, Energetic', 'Earthy, Pungent, Woody', 'Dont let its intense\\\\xa0name fool you: AK-47 will leave you relaxed and mellow. This sativa-dominant hybrid delivers a steady and long-lasting cerebral buzz that keeps you mentally alert and engaged in creative or social activities. AK-47 mixes Colombian, Mexican, Thai, and Afghani varieties, bringing together a complex blend of flavors and effects. While AK-47’s scent is sour and earthy, its sweet floral notes can only be fully realized in the taste.\\\\xa0Created in 1992 by Serious Seeds, AK-47 has won numerous Cannabis Cup awards around the world for its soaring THC content. For those hoping to fill their gardens with this resinous, skunky hybrid, growers recommend an indoor environment with either soil or hydroponic setups. AK-47 is easy to grow and has a short indoor flowering time of just 53 to 63 days, while outdoor plants typically finish toward the end of October.', ' ', 'Happy, Relaxed, Uplifted, Euphoric, Energetic, Earthy, Pungent, Woody')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(curs.fetchall())"
+   ]
   }
  ],
  "metadata": {
