--- a/notebooks/Populate_db.ipynb
+++ b/notebooks/Populate_db.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,16 +13,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('straininfo.csv', index_col=False)"
+    "df = pd.read_csv('straininfo.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Strain</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Effects</th>\n",
+       "      <th>Flavor</th>\n",
+       "      <th>Description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>100 Og</td>\n",
+       "      <td>hybrid</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Creative,Energetic,Tingly,Euphoric,Relaxed</td>\n",
+       "      <td>Earthy,Sweet,Citrus</td>\n",
+       "      <td>$100 OG is a 50/50 hybrid strain that packs a ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>98 White Widow</td>\n",
+       "      <td>hybrid</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>Relaxed,Aroused,Creative,Happy,Energetic</td>\n",
+       "      <td>Flowery,Violet,Diesel</td>\n",
+       "      <td>The ‘98 Aloha White Widow is an especially pot...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1024</td>\n",
+       "      <td>sativa</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>Uplifted,Happy,Relaxed,Energetic,Creative</td>\n",
+       "      <td>Spicy/Herbal,Sage,Woody</td>\n",
+       "      <td>1024 is a sativa-dominant hybrid bred in Spain...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>13 Dawgs</td>\n",
+       "      <td>hybrid</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>Tingly,Creative,Hungry,Relaxed,Uplifted</td>\n",
+       "      <td>Apricot,Citrus,Grapefruit</td>\n",
+       "      <td>13 Dawgs is a hybrid of G13 and Chemdawg genet...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>24K Gold</td>\n",
+       "      <td>hybrid</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>Happy,Relaxed,Euphoric,Uplifted,Talkative</td>\n",
+       "      <td>Citrus,Earthy,Orange</td>\n",
+       "      <td>Also known as Kosher Tangie, 24k Gold is a 60%...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0          Strain    Type  Rating  \\\n",
+       "0           0          100 Og  hybrid     4.0   \n",
+       "1           1  98 White Widow  hybrid     4.7   \n",
+       "2           2            1024  sativa     4.4   \n",
+       "3           3        13 Dawgs  hybrid     4.2   \n",
+       "4           4        24K Gold  hybrid     4.6   \n",
+       "\n",
+       "                                      Effects                     Flavor  \\\n",
+       "0  Creative,Energetic,Tingly,Euphoric,Relaxed        Earthy,Sweet,Citrus   \n",
+       "1    Relaxed,Aroused,Creative,Happy,Energetic      Flowery,Violet,Diesel   \n",
+       "2   Uplifted,Happy,Relaxed,Energetic,Creative    Spicy/Herbal,Sage,Woody   \n",
+       "3     Tingly,Creative,Hungry,Relaxed,Uplifted  Apricot,Citrus,Grapefruit   \n",
+       "4   Happy,Relaxed,Euphoric,Uplifted,Talkative       Citrus,Earthy,Orange   \n",
+       "\n",
+       "                                         Description  \n",
+       "0  $100 OG is a 50/50 hybrid strain that packs a ...  \n",
+       "1  The ‘98 Aloha White Widow is an especially pot...  \n",
+       "2  1024 is a sativa-dominant hybrid bred in Spain...  \n",
+       "3  13 Dawgs is a hybrid of G13 and Chemdawg genet...  \n",
+       "4  Also known as Kosher Tangie, 24k Gold is a 60%...  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop(\"Unnamed: 0\", axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#make the data PostgreSQL friendly\n",
+    "df[\"Description\"] = df[\"Description\"].str.replace(\"'\", '')\n",
+    "df.Effects = df.Effects.str.replace(\",\", \", \")\n",
+    "df.Flavor = df.Flavor.str.replace(\",\", \", \")\n",
+    "df.replace(np.nan, '', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -52,32 +196,26 @@
        "      <th>Effects</th>\n",
        "      <th>Flavor</th>\n",
        "      <th>Description</th>\n",
-       "      <th>symptoms_diseases</th>\n",
-       "      <th>all_text_search</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>100-Og</td>\n",
+       "      <td>100 Og</td>\n",
        "      <td>hybrid</td>\n",
        "      <td>4.0</td>\n",
        "      <td>Creative, Energetic, Tingly, Euphoric, Relaxed</td>\n",
        "      <td>Earthy, Sweet, Citrus</td>\n",
        "      <td>$100 OG is a 50/50 hybrid strain that packs a ...</td>\n",
-       "      <td>ms, pain,</td>\n",
-       "      <td>ms, pain, Creative, Energetic, Tingly, Euphori...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>98-White-Widow</td>\n",
+       "      <td>98 White Widow</td>\n",
        "      <td>hybrid</td>\n",
        "      <td>4.7</td>\n",
        "      <td>Relaxed, Aroused, Creative, Happy, Energetic</td>\n",
        "      <td>Flowery, Violet, Diesel</td>\n",
        "      <td>The ‘98 Aloha White Widow is an especially pot...</td>\n",
-       "      <td></td>\n",
-       "      <td>Relaxed, Aroused, Creative, Happy, Energetic, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
@@ -87,30 +225,24 @@
        "      <td>Uplifted, Happy, Relaxed, Energetic, Creative</td>\n",
        "      <td>Spicy/Herbal, Sage, Woody</td>\n",
        "      <td>1024 is a sativa-dominant hybrid bred in Spain...</td>\n",
-       "      <td>pain,</td>\n",
-       "      <td>pain, Uplifted, Happy, Relaxed, Energetic, Cre...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>13-Dawgs</td>\n",
+       "      <td>13 Dawgs</td>\n",
        "      <td>hybrid</td>\n",
        "      <td>4.2</td>\n",
        "      <td>Tingly, Creative, Hungry, Relaxed, Uplifted</td>\n",
        "      <td>Apricot, Citrus, Grapefruit</td>\n",
        "      <td>13 Dawgs is a hybrid of G13 and Chemdawg genet...</td>\n",
-       "      <td>appetite, depression,</td>\n",
-       "      <td>appetite, depression, Tingly, Creative, Hungry...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>24K-Gold</td>\n",
+       "      <td>24K Gold</td>\n",
        "      <td>hybrid</td>\n",
        "      <td>4.6</td>\n",
        "      <td>Happy, Relaxed, Euphoric, Uplifted, Talkative</td>\n",
        "      <td>Citrus, Earthy, Orange</td>\n",
        "      <td>Also known as Kosher Tangie, 24k Gold is a 60%...</td>\n",
-       "      <td></td>\n",
-       "      <td>Happy, Relaxed, Euphoric, Uplifted, Talkative,...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -118,11 +250,11 @@
       ],
       "text/plain": [
        "           Strain    Type  Rating  \\\n",
-       "0          100-Og  hybrid     4.0   \n",
-       "1  98-White-Widow  hybrid     4.7   \n",
+       "0          100 Og  hybrid     4.0   \n",
+       "1  98 White Widow  hybrid     4.7   \n",
        "2            1024  sativa     4.4   \n",
-       "3        13-Dawgs  hybrid     4.2   \n",
-       "4        24K-Gold  hybrid     4.6   \n",
+       "3        13 Dawgs  hybrid     4.2   \n",
+       "4        24K Gold  hybrid     4.6   \n",
        "\n",
        "                                          Effects  \\\n",
        "0  Creative, Energetic, Tingly, Euphoric, Relaxed   \n",
@@ -138,22 +270,15 @@
        "3  Apricot, Citrus, Grapefruit   \n",
        "4       Citrus, Earthy, Orange   \n",
        "\n",
-       "                                         Description       symptoms_diseases  \\\n",
-       "0  $100 OG is a 50/50 hybrid strain that packs a ...              ms, pain,    \n",
-       "1  The ‘98 Aloha White Widow is an especially pot...                           \n",
-       "2  1024 is a sativa-dominant hybrid bred in Spain...                  pain,    \n",
-       "3  13 Dawgs is a hybrid of G13 and Chemdawg genet...  appetite, depression,    \n",
-       "4  Also known as Kosher Tangie, 24k Gold is a 60%...                           \n",
-       "\n",
-       "                                     all_text_search  \n",
-       "0  ms, pain, Creative, Energetic, Tingly, Euphori...  \n",
-       "1  Relaxed, Aroused, Creative, Happy, Energetic, ...  \n",
-       "2  pain, Uplifted, Happy, Relaxed, Energetic, Cre...  \n",
-       "3  appetite, depression, Tingly, Creative, Hungry...  \n",
-       "4  Happy, Relaxed, Euphoric, Uplifted, Talkative,...  "
+       "                                         Description  \n",
+       "0  $100 OG is a 50/50 hybrid strain that packs a ...  \n",
+       "1  The ‘98 Aloha White Widow is an especially pot...  \n",
+       "2  1024 is a sativa-dominant hybrid bred in Spain...  \n",
+       "3  13 Dawgs is a hybrid of G13 and Chemdawg genet...  \n",
+       "4  Also known as Kosher Tangie, 24k Gold is a 60%...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,18 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#make the data PostgreSQL friendly\n",
-    "df[\"Description\"] = df[\"Description\"].str.replace(\"'\", '')\n",
-    "df.replace(np.nan, '', inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,28 +300,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-13-fe70ad972d03>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#add each strain from the csv file into the database\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mrow\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitertuples\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     insert = f'''\n\u001b[0;32m      4\u001b[0m         INSERT INTO strain VALUES {row[0], row[1], row[2], row[3], row[4], row[5], row[6], row[7], row[8]};'''\n\u001b[0;32m      5\u001b[0m     \u001b[0mcurs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minsert\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#add each strain from the csv file into the database\n",
     "for row in df.itertuples():\n",
     "    insert = f'''\n",
-    "        INSERT INTO strain VALUES {row[0], row[1], row[2], row[3], row[4], row[5], row[6], row[7], row[8]};'''\n",
+    "        INSERT INTO strain VALUES {row[0], row[1], row[2], row[3], row[4], row[5], row[6]};'''\n",
     "    curs.execute(insert)\n",
     "\n",
     "conn.commit()"
@@ -215,31 +317,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "curs.execute('''SELECT * FROM strain WHERE name='Ak-47' ''')"
+    "curs.execute('''SELECT * FROM strain WHERE name='Ak 47' ''')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(23, 'Ak-47', 'hybrid', 4.2, 'Happy, Relaxed, Uplifted, Euphoric, Energetic', 'Earthy, Pungent, Woody', 'Dont let its intense\\\\xa0name fool you: AK-47 will leave you relaxed and mellow. This sativa-dominant hybrid delivers a steady and long-lasting cerebral buzz that keeps you mentally alert and engaged in creative or social activities. AK-47 mixes Colombian, Mexican, Thai, and Afghani varieties, bringing together a complex blend of flavors and effects. While AK-47’s scent is sour and earthy, its sweet floral notes can only be fully realized in the taste.\\\\xa0Created in 1992 by Serious Seeds, AK-47 has won numerous Cannabis Cup awards around the world for its soaring THC content. For those hoping to fill their gardens with this resinous, skunky hybrid, growers recommend an indoor environment with either soil or hydroponic setups. AK-47 is easy to grow and has a short indoor flowering time of just 53 to 63 days, while outdoor plants typically finish toward the end of October.', ' ', 'Happy, Relaxed, Uplifted, Euphoric, Energetic, Earthy, Pungent, Woody')]\n"
+      "[(23, 'Ak 47', 'hybrid', 4.2, 'Happy, Relaxed, Uplifted, Euphoric, Energetic', 'Earthy, Pungent, Woody', 'Dont let its intense\\\\xa0name fool you: AK-47 will leave you relaxed and mellow. This sativa-dominant hybrid delivers a steady and long-lasting cerebral buzz that keeps you mentally alert and engaged in creative or social activities. AK-47 mixes Colombian, Mexican, Thai, and Afghani varieties, bringing together a complex blend of flavors and effects. While AK-47’s scent is sour and earthy, its sweet floral notes can only be fully realized in the taste.\\\\xa0Created in 1992 by Serious Seeds, AK-47 has won numerous Cannabis Cup awards around the world for its soaring THC content. For those hoping to fill their gardens with this resinous, skunky hybrid, growers recommend an indoor environment with either soil or hydroponic setups. AK-47 is easy to grow and has a short indoor flowering time of just 53 to 63 days, while outdoor plants typically finish toward the end of October.')]\n"
      ]
     }
    ],
    "source": [
     "print(curs.fetchall())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
